Fixed font again on Media 500px. Just was too Large.

--- a/css/index.css
+++ b/css/index.css
@@ -427,7 +427,7 @@ footer h3 {
     display: none;
   }
   .top-text {
-    font-size: 6.5rem;
+    font-size: 5rem;
   }
   .top-main {
     width: 96.66%;
